--- a/8.html
+++ b/8.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html style='font-size:14px !important'>
 <head>
 <meta charset='UTF-8'><meta name='viewport' content='width=device-width initial-scale=1'>
