动名词、抽象名词、不定式、分词

--- a/7.html
+++ b/7.html
@@ -836,10 +836,158 @@ input[type='checkbox']:hover:before {
 
 
 
+mjx-container[jax="SVG"] {
+  direction: ltr;
+}
+
+mjx-container[jax="SVG"] > svg {
+  overflow: visible;
+  min-height: 1px;
+  min-width: 1px;
+}
+
+mjx-container[jax="SVG"] > svg a {
+  fill: blue;
+  stroke: blue;
+}
+
+mjx-assistive-mml {
+  position: absolute !important;
+  top: 0px;
+  left: 0px;
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 1px 0px 0px 0px !important;
+  border: 0px !important;
+  display: block !important;
+  width: auto !important;
+  overflow: hidden !important;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+mjx-assistive-mml[display="block"] {
+  width: 100% !important;
+}
+
+mjx-container[jax="SVG"][display="true"] {
+  display: block;
+  text-align: center;
+  margin: 1em 0;
+}
+
+mjx-container[jax="SVG"][display="true"][width="full"] {
+  display: flex;
+}
+
+mjx-container[jax="SVG"][justify="left"] {
+  text-align: left;
+}
+
+mjx-container[jax="SVG"][justify="right"] {
+  text-align: right;
+}
+
+g[data-mml-node="merror"] > g {
+  fill: red;
+  stroke: red;
+}
+
+g[data-mml-node="merror"] > rect[data-background] {
+  fill: yellow;
+  stroke: none;
+}
+
+g[data-mml-node="mtable"] > line[data-line], svg[data-table] > g > line[data-line] {
+  stroke-width: 70px;
+  fill: none;
+}
+
+g[data-mml-node="mtable"] > rect[data-frame], svg[data-table] > g > rect[data-frame] {
+  stroke-width: 70px;
+  fill: none;
+}
+
+g[data-mml-node="mtable"] > .mjx-dashed, svg[data-table] > g > .mjx-dashed {
+  stroke-dasharray: 140;
+}
+
+g[data-mml-node="mtable"] > .mjx-dotted, svg[data-table] > g > .mjx-dotted {
+  stroke-linecap: round;
+  stroke-dasharray: 0,140;
+}
+
+g[data-mml-node="mtable"] > g > svg {
+  overflow: visible;
+}
+
+[jax="SVG"] mjx-tool {
+  display: inline-block;
+  position: relative;
+  width: 0;
+  height: 0;
+}
+
+[jax="SVG"] mjx-tool > mjx-tip {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+mjx-tool > mjx-tip {
+  display: inline-block;
+  padding: .2em;
+  border: 1px solid #888;
+  font-size: 70%;
+  background-color: #F8F8F8;
+  color: black;
+  box-shadow: 2px 2px 5px #AAAAAA;
+}
+
+g[data-mml-node="maction"][data-toggle] {
+  cursor: pointer;
+}
+
+mjx-status {
+  display: block;
+  position: fixed;
+  left: 1em;
+  bottom: 1em;
+  min-width: 25%;
+  padding: .2em .4em;
+  border: 1px solid #888;
+  font-size: 90%;
+  background-color: #F8F8F8;
+  color: black;
+}
+
+foreignObject[data-mjx-xml] {
+  font-family: initial;
+  line-height: normal;
+  overflow: visible;
+}
+
+mjx-container[jax="SVG"] path[data-c], mjx-container[jax="SVG"] use[data-c] {
+  stroke-width: 3;
+}
+
+g[data-mml-node="xypic"] path {
+  stroke-width: inherit;
+}
+
+.MathJax g[data-mml-node="xypic"] path {
+  stroke-width: inherit;
+}
+mjx-container[jax="SVG"] path[data-c], mjx-container[jax="SVG"] use[data-c] {
+							stroke-width: 0;
+						}
 </style><title>7. 动名词、抽象名词、不定式、分词</title>
 </head>
 <body class='typora-export typora-export-show-outline typora-export-collapse-outline'><div class='typora-export-content'>
-<div class="typora-export-sidebar"><div class="outline-content"><li class="outline-item-wrapper outline-h2"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#动名词抽象名词不定式分词">动名词、抽象名词、不定式、分词</a></div><ul class="outline-children"><li class="outline-item-wrapper outline-h3 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#i-动名词">I. 动名词</a></div><ul class="outline-children"></ul></li><li class="outline-item-wrapper outline-h3 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#ii-抽象名词">II. 抽象名词</a></div><ul class="outline-children"></ul></li><li class="outline-item-wrapper outline-h3 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#iii-不定式">III. 不定式</a></div><ul class="outline-children"></ul></li><li class="outline-item-wrapper outline-h3"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#iv-分词">IV. 分词</a></div><ul class="outline-children"><li class="outline-item-wrapper outline-h4 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#现在分词">现在分词</a></div><ul class="outline-children"></ul></li><li class="outline-item-wrapper outline-h4 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#过去分词">过去分词</a></div><ul class="outline-children"></ul></li></ul></li></ul></li></div></div><div id='write'  class=''><h2 id='动名词抽象名词不定式分词'><span>动名词、抽象名词、不定式、分词</span></h2><hr /><h3 id='i-动名词'><span>I. 动名词</span></h3><ul><li><p><span>变位方法：</span></p><ul><li><span>对于原生动词，</span><font color  = skyblue><span>应添加后缀&quot;</span><strong><span>-ië</span></strong><span>&quot;</span></font><span>。</span></li><li><span>对于派生动词，</span><font color  = skyblue><span>应先去掉</span><strong><span>-a</span></strong><span>，再添加后缀&quot;-ië&quot;</span></font><span>。对于以</span><strong><span>-ya</span></strong><span>结尾的动词，应先去掉</span><strong><span>-ya</span></strong><span>再添加后缀&quot;</span><strong><span>-ië</span></strong><span>&quot;。</span></li></ul></li></ul><blockquote><p><font color  = slategrey><span>注释1：派生动词有另一种动名词后缀&quot;</span><strong><span>-lë</span></strong><span>&quot;，其含义基本与&quot;</span><strong><span>-ië</span></strong><span>&quot;相同。</span></font></p><p><font color  = slategrey><span>注释2：后缀&quot;</span><strong><span>-ië</span></strong><span>&quot;除了可以加在动词后面构成动名词，还可以加在以</span><strong><span>-a</span></strong><span>结尾的形容词后面，将其变为名词，类似于英语后缀&quot;-ness&quot;。</span></font></p></blockquote><ul><li><p><span>对标英语动名词，Quenya动名词有如下的特殊用法：</span></p><ul><li><font color  = skyblue><span>英语中“不定式做目的状语”的用法，在Quenya中统一变为“与格动名词做目的状语”</span></font><span>。参见</span><a href='https://david-dhc.github.io/Quenya-Textbooks-in-Mandarin/6.html#%E4%B8%8E%E6%A0%BC'><span>名词的格变换、介词-名词的格变换-与格</span></a><span>。</span></li><li><span>动名词的本质仍然是名词，因此</span><font color  = skyblue><span>它可以接受物主代词后缀，也可以进行格变换</span></font><span>。</span></li></ul></li></ul><p>&nbsp;</p><hr /><h3 id='ii-抽象名词'><span>II. 抽象名词</span></h3><ul><li><span>定义：当一个动词的自身又为名词时，这个名词就是“抽象名词”。</span></li><li><span>Quenya中，</span><font color  = skyblue><span>抽象名词一般以</span><strong><span>-ta</span></strong><span>结尾</span></font><span>，例如：</span><strong><span>lanta</span></strong><span>，</span><strong><span>laita</span></strong><span> &quot;praise&quot;，</span><strong><span>vanta</span></strong><span> &quot;walk&quot;。</span></li></ul><p>&nbsp;</p><hr /><h3 id='iii-不定式'><span>III. 不定式</span></h3><ul><li><p><span>变位方法：</span></p><ul><li><p><span>对于原生动词，</span><font color  = skyblue><span>其不定过去式就是不定式</span></font><span>。</span></p><ol start='2' ><li><span>对于派生动词，</span><font color  = skyblue><span>其本身就是不定式</span></font><span>。</span></li></ol></li></ul></li><li><p><span>对标英语不定式，Quenya不定式有如下的特殊用法：</span></p><ul><li><span>Quenya无“不定式做目的状语”的用法，只有“与格动名词做目的状语”的用法。参见</span><a href='https://david-dhc.github.io/Quenya-Textbooks-in-Mandarin/6.html#%E4%B8%8E%E6%A0%BC'><span>名词的格变换、介词-名词的格变换-与格</span></a><span>。</span></li><li><span>不定式之后若需要添加人称代词后缀，则</span><font color  = skyblue><span>需要在不定式之后先加连接性后缀&quot;</span><strong><span>-ta</span></strong><span>&quot;</span></font><span>。</span></li></ul></li></ul><p>&nbsp;</p><hr /><h3 id='iv-分词'><span>IV. 分词</span></h3><p><span>由于分词在词性上属于形容词，因此分词与形容词一样需要与中心词保持数的一致。</span></p><blockquote><p><font color = slategrey><span>如下所述，分词的结尾都是</span><strong><span>-a</span></strong><span>，这也从侧面体现出它们本质上都是形容词。</span></font></p></blockquote><h4 id='现在分词'><span>现在分词</span></h4><ul><li><p><span>变位方法：</span></p><ol start='' ><li><span>对于原生动词，</span><font color  = skyblue><span>先变为现在进行时，再添加后缀&quot;</span><strong><span>-la</span></strong><span>&quot;</span></font><span>即可。</span></li><li><span>对于派生动词，</span><font color  = skyblue><span>直接添加后缀&quot;</span><strong><span>-la</span></strong><span>&quot;即可</span></font><span>。</span></li></ol></li><li><p><span>对标英语的现在分词，Quenya不定式有如下的特殊用法：</span></p><ul><li><span>Quenya的现在进行时不可以用be+现在分词的形式实现。</span></li></ul></li></ul><p>&nbsp;</p><h4 id='过去分词'><span>过去分词</span></h4><ul><li><span>变位方法：对任何动词都直接添加后缀&quot;</span><strong><span>-ina</span></strong><span>&quot;即可。</span></li><li><font color  = skyblue><span>英语中be+过去分词表示被动语态的用法，在Quenya中也成立</span></font><span>。</span></li></ul><p>&nbsp;</p><hr /><p><a href='https://david-dhc.github.io/Quenya-Textbooks-in-Mandarin/'><span>返回首页</span></a></p></div></div>
+<div class="typora-export-sidebar"><div class="outline-content"><li class="outline-item-wrapper outline-h2"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#动名词抽象名词不定式分词">动名词、抽象名词、不定式、分词</a></div><ul class="outline-children"><li class="outline-item-wrapper outline-h3 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#i-动名词">I. 动名词</a></div><ul class="outline-children"></ul></li><li class="outline-item-wrapper outline-h3 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#ii-抽象名词">II. 抽象名词</a></div><ul class="outline-children"></ul></li><li class="outline-item-wrapper outline-h3 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#iii-不定式">III. 不定式</a></div><ul class="outline-children"></ul></li><li class="outline-item-wrapper outline-h3"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#iv-分词">IV. 分词</a></div><ul class="outline-children"><li class="outline-item-wrapper outline-h4 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#现在分词">现在分词</a></div><ul class="outline-children"></ul></li><li class="outline-item-wrapper outline-h4 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#过去分词">过去分词</a></div><ul class="outline-children"></ul></li></ul></li></ul></li></div></div><div id='write'  class=''><h2 id='动名词抽象名词不定式分词'><span>动名词、抽象名词、不定式、分词</span></h2><hr /><h3 id='i-动名词'><span>I. 动名词</span></h3><ul><li><p><span>变位方法：</span></p><ul><li><span>对于原生动词，</span><font color  = skyblue><span>应添加后缀&quot;</span><strong><span>-ië</span></strong><span>&quot;</span></font><span>。</span></li><li><span>对于派生动词，</span><font color  = skyblue><span>应先去掉</span><strong><span>-a</span></strong><span>，再添加后缀&quot;-ië&quot;</span></font><span>。对于以</span><strong><span>-ya</span></strong><span>结尾的动词，应先去掉</span><strong><span>-ya</span></strong><span>再添加后缀&quot;</span><strong><span>-ië</span></strong><span>&quot;。</span></li></ul></li></ul><blockquote><p><font color  = slategrey><span>注释1：派生动词有另一种动名词后缀&quot;</span><strong><span>-lë</span></strong><span>&quot;，其含义基本与&quot;</span><strong><span>-ië</span></strong><span>&quot;相同。</span></font></p><p><font color  = slategrey><span>注释2：后缀&quot;</span><strong><span>-ië</span></strong><span>&quot;除了可以加在动词后面构成动名词，还可以加在以</span><strong><span>-a</span></strong><span>结尾的形容词后面，将其变为名词，类似于英语后缀&quot;-ness&quot;。</span></font></p></blockquote><ul><li><p><span>对标英语动名词，Quenya动名词有如下的特殊用法：</span></p><ul><li><font color  = skyblue><span>英语中“不定式做目的状语”的用法，在Quenya中统一变为“与格动名词做目的状语”</span></font><span>。参见</span><a href='https://david-dhc.github.io/Quenya-Textbooks-in-Mandarin/6.html#%E4%B8%8E%E6%A0%BC'><span>名词的格变换、介词-名词的格变换-与格</span></a><span>。</span></li><li><span>动名词的本质仍然是名词，因此</span><font color  = skyblue><span>它可以接受物主代词后缀，也可以进行格变换</span></font><span>。</span></li></ul></li></ul><p>&nbsp;</p><hr /><h3 id='ii-抽象名词'><span>II. 抽象名词</span></h3><ul><li><span>定义：当一个动词的自身又为名词时，这个名词就是“抽象名词”。</span></li><li><span>Quenya中，</span><font color  = skyblue><span>抽象名词一般以</span><strong><span>-ta</span></strong><span>结尾</span></font><span>，例如：</span><strong><span>lanta</span></strong><span>，</span><strong><span>laita</span></strong><span> &quot;praise&quot;，</span><strong><span>vanta</span></strong><span> &quot;walk&quot;。</span></li></ul><p>&nbsp;</p><hr /><h3 id='iii-不定式'><span>III. 不定式</span></h3><ul><li><p><span>变位方法：</span></p><ul><li><span>对于原生动词，</span><font color  = skyblue><span>其不定过去式就是不定式</span></font><span>。</span></li><li><span>对于派生动词，</span><font color  = skyblue><span>其本身就是不定式</span></font><span>。</span></li></ul></li><li><p><span>对标英语不定式，Quenya不定式有如下的特殊用法：</span></p><ul><li><span>Quenya无“不定式做目的状语”的用法，只有“与格动名词做目的状语”的用法。参见</span><a href='https://david-dhc.github.io/Quenya-Textbooks-in-Mandarin/6.html#%E4%B8%8E%E6%A0%BC'><span>名词的格变换、介词-名词的格变换-与格</span></a><span>。</span></li><li><span>不定式之后若需要添加人称代词后缀，则</span><font color  = skyblue><span>需要在不定式之后先加连接性后缀&quot;</span><strong><span>-ta</span></strong><span>&quot;</span></font><span>。</span></li></ul></li></ul><p>&nbsp;</p><hr /><h3 id='iv-分词'><span>IV. 分词</span></h3><p><span>由于分词在词性上属于形容词，因此分词与形容词一样需要与中心词保持数的一致。</span></p><blockquote><p><font color = slategrey><span>如下所述，分词的结尾都是</span><strong><span>-a</span></strong><span>，这也从侧面体现出它们本质上都是形容词。</span></font></p></blockquote><h4 id='现在分词'><span>现在分词</span></h4><ul><li><p><span>变位方法：</span></p><ul><li><span>对于原生动词，</span><font color  = skyblue><span>先变为现在进行时，再添加后缀&quot;</span><strong><span>-la</span></strong><span>&quot;</span></font><span>即可。</span></li></ul><ul><li><span>对于派生动词，</span><font color  = skyblue><span>直接添加后缀&quot;</span><strong><span>-la</span></strong><span>&quot;即可</span></font><span>。</span></li></ul></li><li><p><span>对标英语的现在分词，Quenya不定式有如下的特殊用法：</span></p><ul><li><span>Quenya的现在进行时不可以用be+现在分词的形式实现。</span></li></ul></li></ul><p>&nbsp;</p><h4 id='过去分词'><span>过去分词</span></h4><ul><li><span>变位方法：对任何动词都直接添加后缀&quot;</span><strong><span>-ina</span></strong><span>&quot;即可。</span></li><li><font color  = skyblue><span>英语中be+过去分词表示被动语态的用法，在Quenya中也成立</span></font><span>。</span></li></ul><p>&nbsp;</p><hr /><p><a href='https://david-dhc.github.io/Quenya-Textbooks-in-Mandarin/'><span>返回首页</span></a></p></div></div>
 
 <script>(function(){var e=document.body.parentElement,t=[],n=null,i=document.body.classList.contains("typora-export-collapse-outline"),r=function(e,t,n){document.addEventListener(e,function(e){if(!e.defaultPrevented)for(var i=e.target;i&&i!=this;i=i.parentNode)if(i.matches(t)){!1===n.call(i,e)&&(e.preventDefault(),e.stopPropagation());break}},!1)};function o(){return e.scrollTop}r("click",".outline-expander",function(e){var t=this.closest(".outline-item-wrapper").classList;return t.contains("outline-item-open")?t.remove("outline-item-open"):t.add("outline-item-open"),d(),!1}),r("click",".outline-item",function(e){var t=this.querySelector(".outline-label");if(location.hash="#"+t.getAttribute("href"),i){var n=this.closest(".outline-item-wrapper").classList;n.contains("outline-item-open")||n.add("outline-item-open"),c(),n.add("outline-item-active")}});var a,s,l=function(){var e=o();n=null;for(var i=0;i<t.length&&t[i][1]-e<60;i++)n=t[i]},c=function(){document.querySelectorAll(".outline-item-active").forEach(e=>e.classList.remove("outline-item-active")),document.querySelectorAll(".outline-item-single.outline-item-open").forEach(e=>e.classList.remove("outline-item-open"))},d=function(){if(n){c();var e=document.querySelector('.outline-label[href="#'+(CSS.escape?CSS.escape(n[0]):n[0])+'"]');if(e)if(i){var t=e.closest(".outline-item-open>ul>.outline-item-wrapper");if(t)t.classList.add("outline-item-active");else{for(var r=(e=e.closest(".outline-item-wrapper")).parentElement.closest(".outline-item-wrapper");r;)r=(e=r).parentElement.closest(".outline-item-wrapper");e.classList.add("outline-item-active")}}else e.closest(".outline-item-wrapper").classList.add("outline-item-active")}};window.addEventListener("scroll",function(e){a&&clearTimeout(a),a=setTimeout(function(){l(),d()},300)});var u=function(){s=setTimeout(function(){!function(){t=[];var e=o();document.querySelector("#write").querySelectorAll("h1, h2, h3, h4, h5, h6").forEach(n=>{var i=n.getAttribute("id");t.push([i,e+n.getBoundingClientRect().y])})}(),l(),d()},300)};window.addEventListener("resize",function(e){s&&clearTimeout(s),u()}),u()})();</script></body>
 </html>
