冠词与名词

--- a/2.html
+++ b/2.html
@@ -836,10 +836,158 @@ input[type='checkbox']:hover:before {
 
 
 
+mjx-container[jax="SVG"] {
+  direction: ltr;
+}
+
+mjx-container[jax="SVG"] > svg {
+  overflow: visible;
+  min-height: 1px;
+  min-width: 1px;
+}
+
+mjx-container[jax="SVG"] > svg a {
+  fill: blue;
+  stroke: blue;
+}
+
+mjx-assistive-mml {
+  position: absolute !important;
+  top: 0px;
+  left: 0px;
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 1px 0px 0px 0px !important;
+  border: 0px !important;
+  display: block !important;
+  width: auto !important;
+  overflow: hidden !important;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+mjx-assistive-mml[display="block"] {
+  width: 100% !important;
+}
+
+mjx-container[jax="SVG"][display="true"] {
+  display: block;
+  text-align: center;
+  margin: 1em 0;
+}
+
+mjx-container[jax="SVG"][display="true"][width="full"] {
+  display: flex;
+}
+
+mjx-container[jax="SVG"][justify="left"] {
+  text-align: left;
+}
+
+mjx-container[jax="SVG"][justify="right"] {
+  text-align: right;
+}
+
+g[data-mml-node="merror"] > g {
+  fill: red;
+  stroke: red;
+}
+
+g[data-mml-node="merror"] > rect[data-background] {
+  fill: yellow;
+  stroke: none;
+}
+
+g[data-mml-node="mtable"] > line[data-line], svg[data-table] > g > line[data-line] {
+  stroke-width: 70px;
+  fill: none;
+}
+
+g[data-mml-node="mtable"] > rect[data-frame], svg[data-table] > g > rect[data-frame] {
+  stroke-width: 70px;
+  fill: none;
+}
+
+g[data-mml-node="mtable"] > .mjx-dashed, svg[data-table] > g > .mjx-dashed {
+  stroke-dasharray: 140;
+}
+
+g[data-mml-node="mtable"] > .mjx-dotted, svg[data-table] > g > .mjx-dotted {
+  stroke-linecap: round;
+  stroke-dasharray: 0,140;
+}
+
+g[data-mml-node="mtable"] > g > svg {
+  overflow: visible;
+}
+
+[jax="SVG"] mjx-tool {
+  display: inline-block;
+  position: relative;
+  width: 0;
+  height: 0;
+}
+
+[jax="SVG"] mjx-tool > mjx-tip {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+mjx-tool > mjx-tip {
+  display: inline-block;
+  padding: .2em;
+  border: 1px solid #888;
+  font-size: 70%;
+  background-color: #F8F8F8;
+  color: black;
+  box-shadow: 2px 2px 5px #AAAAAA;
+}
+
+g[data-mml-node="maction"][data-toggle] {
+  cursor: pointer;
+}
+
+mjx-status {
+  display: block;
+  position: fixed;
+  left: 1em;
+  bottom: 1em;
+  min-width: 25%;
+  padding: .2em .4em;
+  border: 1px solid #888;
+  font-size: 90%;
+  background-color: #F8F8F8;
+  color: black;
+}
+
+foreignObject[data-mjx-xml] {
+  font-family: initial;
+  line-height: normal;
+  overflow: visible;
+}
+
+mjx-container[jax="SVG"] path[data-c], mjx-container[jax="SVG"] use[data-c] {
+  stroke-width: 3;
+}
+
+g[data-mml-node="xypic"] path {
+  stroke-width: inherit;
+}
+
+.MathJax g[data-mml-node="xypic"] path {
+  stroke-width: inherit;
+}
+mjx-container[jax="SVG"] path[data-c], mjx-container[jax="SVG"] use[data-c] {
+							stroke-width: 0;
+						}
 </style><title>2. 冠词与名词</title>
 </head>
 <body class='typora-export typora-export-show-outline typora-export-collapse-outline'><div class='typora-export-content'>
-<div class="typora-export-sidebar"><div class="outline-content"><li class="outline-item-wrapper outline-h2"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#冠词与名词">冠词与名词</a></div><ul class="outline-children"><li class="outline-item-wrapper outline-h3 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#i-冠词">I. 冠词</a></div><ul class="outline-children"></ul></li><li class="outline-item-wrapper outline-h3"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#ii-名词">II. 名词<span>	</span></a></div><ul class="outline-children"><li class="outline-item-wrapper outline-h4 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#名词的性">名词的性</a></div><ul class="outline-children"></ul></li><li class="outline-item-wrapper outline-h4 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#名词的数">名词的数</a></div><ul class="outline-children"></ul></li><li class="outline-item-wrapper outline-h4 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#名词的格">名词的格</a></div><ul class="outline-children"></ul></li></ul></li></ul></li></div></div><div id='write'  class=''><h2 id='冠词与名词'><span>冠词与名词</span></h2><hr /><h3 id='i-冠词'><span>I. 冠词</span></h3><p><span>Quenya没有不定冠词。</span></p><p><span>任何情况下，Quenya定冠词都是</span><strong><span>i</span></strong><span>。</span></p><p>&nbsp;</p><hr /><h3 id='ii-名词'><span>II. 名词</span><span>	</span></h3><h4 id='名词的性'><span>名词的性</span></h4><p><span>Quenya名词没有性的区别</span></p><p>&nbsp;</p><h4 id='名词的数'><span>名词的数</span></h4><p><span>Quenya名词分为单数、双数、复数、集合复数。</span></p><ol start='' ><li><p><span>双数：</span><font color = skyblue><span>成双成对出现的事物，可以使用双数</span></font><span>。</span></p><blockquote><p><font color = slategrey><span>注释：不是所有的“两个”事物，都能被认为是“一对”、“一双”。请注意区分。</span></font></p></blockquote><p><span>变形方法：</span></p><ul><li><p><span>以辅音字母结尾的名词，</span><font color = skyblue><span>加&quot;</span><strong><span>-u</span></strong><span>&quot;</span></font><span>。若该辅音字母前为长元音，则</span><font color = skyblue><span>缩短之</span></font><span>。</span></p></li><li><p><span>以短元音、双元音结尾的名词，</span><font color = skyblue><span>加&quot;</span><strong><span>-t</span></strong><span>&quot;</span></font><span>。特殊情况如下：</span></p><ul><li><span>以</span><strong><span>d/t</span></strong><span>+短元音结尾的词，去掉这个短元音，而后加&quot;</span><strong><span>-u</span></strong><span>&quot;。</span></li><li><span>表示身体部位的词，若以短元音、双元音结尾，则去掉最后一个元音字母，再加&quot;</span><strong><span>-u</span></strong><span>&quot;。同时也可采用正常的&quot;</span><strong><span>-t</span></strong><span>&quot;后缀。</span></li></ul></li><li><p><span>以长元音结尾的词，</span><font color = skyblue><span>缩短长元音后加&quot;</span><strong><span>-u</span></strong><span>&quot;</span></font><span>。</span></p></li></ul><p><span>例词：</span></p><ul><li><strong><span>ranco</span></strong><span> &quot;arm&quot; + </span><strong><span>-u</span></strong><span> = </span><strong><span>rancu</span></strong><span> &quot;a pair of arms&quot; 双臂。</span></li><li><strong><span>pé</span></strong><span> &quot;lip&quot; + </span><strong><span>-u</span></strong><span> = </span><strong><span>peu</span></strong><span> &quot;a pair of lips&quot; 双唇。</span></li><li><strong><span>má</span></strong><span> &quot;hand&quot; + </span><strong><span>-t</span></strong><span> = </span><strong><span>mát</span></strong><span> &quot;a pair of hands&quot; 双手。</span></li><li><strong><span>Marto</span></strong><span> &quot;Tower&quot; + </span><strong><span>-u</span></strong><span> = </span><strong><span>Martu</span></strong><span> &quot;Two Towers&quot; 双塔。</span></li></ul></li><li><p><span>集合复数：</span><font color = skyblue><span>指成群出现的事物</span></font><span>，略宽泛于英语“集合名词”的概念。</span></p><blockquote><p><font color = slategrey><span>注释：目前，研究人员对Quenya是否存在集合复数仍有争议，这里我们姑且将其列出。</span></font></p></blockquote><p><span>变形方法：</span></p><ul><li><span>以辅音字母结尾的词，加&quot;</span><strong><span>-li</span></strong><span>&quot;。</span></li><li><span>以元音字母结尾的词，加&quot;</span><strong><span>-i</span></strong><span>&quot;。</span></li></ul><p><span>例词：</span></p><ul><li><strong><span>elen</span></strong><span> &quot;star&quot; + </span><strong><span>-i</span></strong><span> = </span><strong><span>eleni</span></strong><span> &quot;stars&quot; 群星。</span></li><li><strong><span>alda</span></strong><span> &quot;tree&quot; + </span><strong><span>-li</span></strong><span> = </span><strong><span>aldali</span></strong><span> &quot;woods&quot; 森林。</span></li><li><strong><span>nírë</span></strong><span> &quot;tear&quot; + </span><strong><span>-li</span></strong><span> = </span><strong><span>níreli</span></strong><span> &quot;tears&quot; 泪雨。</span></li></ul></li><li><p><span>复数：定义：非单个、非成对、非成群的事物，均使用复数。</span></p><blockquote><p><font color = slategrey><span>注释：依照此定义，即使某事物是两个，只要非成对，也要用复数（而非双数）。</span></font></p></blockquote><p><span>变形方法：</span></p><ul><li><span>以辅音字母结尾的名词，加&quot;</span><strong><span>-i</span></strong><span>&quot;。</span></li><li><span>以元音字母结尾的名词，加&quot;</span><strong><span>-r</span></strong><span>&quot;。特殊情况如下：</span></li><li><span>以</span><strong><span>-ë</span></strong><span>结尾的名词（以</span><strong><span>-ië</span></strong><span>或</span><strong><span>-llë</span></strong><span>结尾的除外），去掉&quot;</span><strong><span>-ë</span></strong><span>&quot;加&quot;</span><strong><span>-i</span></strong><span>&quot;。</span></li></ul><p><span>例词：</span></p><ul><li><strong><span>ráma</span></strong><span> &quot;wing&quot; + </span><strong><span>-r</span></strong><span> = </span><strong><span>rámar</span></strong><span> &quot;wings&quot; 翅膀。</span></li><li><strong><span>tië</span></strong><span> &quot;road&quot; + </span><strong><span>-r</span></strong><span> = </span><strong><span>tier</span></strong><span> &quot;roads&quot; 道路。</span></li><li><strong><span>lassë</span></strong><span> &quot;leaf&quot; + </span><strong><span>-i</span></strong><span> = </span><strong><span>lassi</span></strong><span> &quot;leaves&quot; 树叶。</span></li><li><strong><span>aran</span></strong><span> &quot;king&quot; + </span><strong><span>-i</span></strong><span> = </span><strong><span>arani</span></strong><span> &quot;kings&quot; 国王们。</span></li></ul></li></ol><h4 id='名词的格'><span>名词的格</span></h4><p><span>详见</span><a href='https://david-dhc.github.io/Quenya-Textbooks-in-Mandarin/6.html#i-%E5%90%8D%E8%AF%8D%E7%9A%84%E6%A0%BC%E5%8F%98%E6%8D%A2'><span>名词的格变换、介词-名词的格变换</span></a></p><hr /><p><a href='https://david-dhc.github.io/Quenya-Textbooks-in-Mandarin/'><span>返回首页</span></a></p></div></div>
+<div class="typora-export-sidebar"><div class="outline-content"><li class="outline-item-wrapper outline-h2"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#冠词与名词">冠词与名词</a></div><ul class="outline-children"><li class="outline-item-wrapper outline-h3 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#i-冠词">I. 冠词</a></div><ul class="outline-children"></ul></li><li class="outline-item-wrapper outline-h3"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#ii-名词">II. 名词<span>	</span></a></div><ul class="outline-children"><li class="outline-item-wrapper outline-h4 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#名词的性">名词的性</a></div><ul class="outline-children"></ul></li><li class="outline-item-wrapper outline-h4 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#名词的数">名词的数</a></div><ul class="outline-children"></ul></li><li class="outline-item-wrapper outline-h4 outline-item-single"><div class="outline-item"><span class="outline-expander"></span><a class="outline-label" href="#名词的格">名词的格</a></div><ul class="outline-children"></ul></li></ul></li></ul></li></div></div><div id='write'  class=''><h2 id='冠词与名词'><span>冠词与名词</span></h2><hr /><h3 id='i-冠词'><span>I. 冠词</span></h3><p><span>Quenya没有不定冠词。</span></p><p><span>任何情况下，Quenya定冠词都是</span><strong><span>i</span></strong><span>。</span></p><p>&nbsp;</p><hr /><h3 id='ii-名词'><span>II. 名词</span><span>	</span></h3><h4 id='名词的性'><span>名词的性</span></h4><p><span>Quenya名词没有性的区别</span></p><p>&nbsp;</p><h4 id='名词的数'><span>名词的数</span></h4><p><span>Quenya名词分为单数、双数、复数、集合复数。</span></p><ol start='' ><li><p><span>双数：</span><font color = skyblue><span>成双成对出现的事物，可以使用双数</span></font><span>。</span></p><blockquote><p><font color = slategrey><span>注释：不是所有的“两个”事物，都能被认为是“一对”、“一双”。请注意区分。</span></font></p></blockquote><p><span>变形方法：</span></p><ul><li><p><span>以辅音字母结尾的名词，</span><font color = skyblue><span>加&quot;</span><strong><span>-u</span></strong><span>&quot;</span></font><span>。若该辅音字母前为长元音，则</span><font color = skyblue><span>缩短之</span></font><span>。</span></p></li><li><p><span>以短元音、双元音结尾的名词，</span><font color = skyblue><span>加&quot;</span><strong><span>-t</span></strong><span>&quot;</span></font><span>。特殊情况如下：</span></p><ul><li><span>以</span><strong><span>d/t</span></strong><span>+短元音结尾的词，去掉这个短元音，而后加&quot;</span><strong><span>-u</span></strong><span>&quot;。</span></li><li><span>表示身体部位的词，若以短元音、双元音结尾，则去掉最后一个元音字母，再加&quot;</span><strong><span>-u</span></strong><span>&quot;。同时也可采用正常的&quot;</span><strong><span>-t</span></strong><span>&quot;后缀。</span></li></ul></li><li><p><span>以长元音结尾的词，</span><font color = skyblue><span>缩短长元音后加&quot;</span><strong><span>-u</span></strong><span>&quot;</span></font><span>。</span></p></li></ul><p><span>例词：</span></p><ul><li><strong><span>ranco</span></strong><span> &quot;arm&quot; + </span><strong><span>-u</span></strong><span> = </span><strong><span>rancu</span></strong><span> &quot;a pair of arms&quot; 双臂。</span></li><li><strong><span>pé</span></strong><span> &quot;lip&quot; + </span><strong><span>-u</span></strong><span> = </span><strong><span>peu</span></strong><span> &quot;a pair of lips&quot; 双唇。</span></li><li><strong><span>má</span></strong><span> &quot;hand&quot; + </span><strong><span>-t</span></strong><span> = </span><strong><span>mát</span></strong><span> &quot;a pair of hands&quot; 双手。</span></li><li><strong><span>Marto</span></strong><span> &quot;Tower&quot; + </span><strong><span>-u</span></strong><span> = </span><strong><span>Martu</span></strong><span> &quot;Two Towers&quot; 双塔。</span></li></ul></li><li><p><span>集合复数：</span><font color = skyblue><span>指成群出现的事物</span></font><span>，略宽泛于英语“集合名词”的概念。</span></p><blockquote><p><font color = slategrey><span>注释：目前，研究人员对Quenya是否存在集合复数仍有争议，这里我们姑且将其列出。</span></font></p></blockquote><p><span>变形方法：</span></p><ul><li><span>以辅音字母结尾的词，加&quot;</span><strong><span>-li</span></strong><span>&quot;。</span></li><li><span>以元音字母结尾的词，加&quot;</span><strong><span>-i</span></strong><span>&quot;。</span></li></ul><p><span>例词：</span></p><ul><li><strong><span>elen</span></strong><span> &quot;star&quot; + </span><strong><span>-i</span></strong><span> = </span><strong><span>eleni</span></strong><span> &quot;stars&quot; 群星。</span></li><li><strong><span>alda</span></strong><span> &quot;tree&quot; + </span><strong><span>-li</span></strong><span> = </span><strong><span>aldali</span></strong><span> &quot;woods&quot; 森林。</span></li><li><strong><span>nírë</span></strong><span> &quot;tear&quot; + </span><strong><span>-li</span></strong><span> = </span><strong><span>níreli</span></strong><span> &quot;tears&quot; 泪雨。</span></li></ul></li><li><p><span>复数：定义：非单个、非成对、非成群的事物，均使用复数。</span></p><blockquote><p><font color = slategrey><span>注释：依照此定义，即使某事物是两个，只要非成对，也要用复数（而非双数）。</span></font></p></blockquote><p><span>变形方法：</span></p><ul><li><span>以辅音字母结尾的名词，加&quot;</span><strong><span>-i</span></strong><span>&quot;。</span></li><li><span>以元音字母结尾的名词，加&quot;</span><strong><span>-r</span></strong><span>&quot;。特殊情况如下：</span></li><li><span>以</span><strong><span>-ë</span></strong><span>结尾的名词（以</span><strong><span>-ië</span></strong><span>或</span><strong><span>-llë</span></strong><span>结尾的除外），去掉&quot;</span><strong><span>-ë</span></strong><span>&quot;加&quot;</span><strong><span>-i</span></strong><span>&quot;。</span></li></ul><p><span>例词：</span></p><ul><li><strong><span>ráma</span></strong><span> &quot;wing&quot; + </span><strong><span>-r</span></strong><span> = </span><strong><span>rámar</span></strong><span> &quot;wings&quot; 翅膀。</span></li><li><strong><span>tië</span></strong><span> &quot;road&quot; + </span><strong><span>-r</span></strong><span> = </span><strong><span>tier</span></strong><span> &quot;roads&quot; 道路。</span></li><li><strong><span>lassë</span></strong><span> &quot;leaf&quot; + </span><strong><span>-i</span></strong><span> = </span><strong><span>lassi</span></strong><span> &quot;leaves&quot; 树叶。</span></li><li><strong><span>aran</span></strong><span> &quot;king&quot; + </span><strong><span>-i</span></strong><span> = </span><strong><span>arani</span></strong><span> &quot;kings&quot; 国王们。</span></li></ul></li></ol><p>&nbsp;</p><h4 id='名词的格'><span>名词的格</span></h4><p><span>详见</span><a href='https://david-dhc.github.io/Quenya-Textbooks-in-Mandarin/6.html#i-%E5%90%8D%E8%AF%8D%E7%9A%84%E6%A0%BC%E5%8F%98%E6%8D%A2'><span>名词的格变换、介词-名词的格变换</span></a></p><p>&nbsp;</p><hr /><p><a href='https://david-dhc.github.io/Quenya-Textbooks-in-Mandarin/'><span>返回首页</span></a></p></div></div>
 
 <script>(function(){var e=document.body.parentElement,t=[],n=null,i=document.body.classList.contains("typora-export-collapse-outline"),r=function(e,t,n){document.addEventListener(e,function(e){if(!e.defaultPrevented)for(var i=e.target;i&&i!=this;i=i.parentNode)if(i.matches(t)){!1===n.call(i,e)&&(e.preventDefault(),e.stopPropagation());break}},!1)};function o(){return e.scrollTop}r("click",".outline-expander",function(e){var t=this.closest(".outline-item-wrapper").classList;return t.contains("outline-item-open")?t.remove("outline-item-open"):t.add("outline-item-open"),d(),!1}),r("click",".outline-item",function(e){var t=this.querySelector(".outline-label");if(location.hash="#"+t.getAttribute("href"),i){var n=this.closest(".outline-item-wrapper").classList;n.contains("outline-item-open")||n.add("outline-item-open"),c(),n.add("outline-item-active")}});var a,s,l=function(){var e=o();n=null;for(var i=0;i<t.length&&t[i][1]-e<60;i++)n=t[i]},c=function(){document.querySelectorAll(".outline-item-active").forEach(e=>e.classList.remove("outline-item-active")),document.querySelectorAll(".outline-item-single.outline-item-open").forEach(e=>e.classList.remove("outline-item-open"))},d=function(){if(n){c();var e=document.querySelector('.outline-label[href="#'+(CSS.escape?CSS.escape(n[0]):n[0])+'"]');if(e)if(i){var t=e.closest(".outline-item-open>ul>.outline-item-wrapper");if(t)t.classList.add("outline-item-active");else{for(var r=(e=e.closest(".outline-item-wrapper")).parentElement.closest(".outline-item-wrapper");r;)r=(e=r).parentElement.closest(".outline-item-wrapper");e.classList.add("outline-item-active")}}else e.closest(".outline-item-wrapper").classList.add("outline-item-active")}};window.addEventListener("scroll",function(e){a&&clearTimeout(a),a=setTimeout(function(){l(),d()},300)});var u=function(){s=setTimeout(function(){!function(){t=[];var e=o();document.querySelector("#write").querySelectorAll("h1, h2, h3, h4, h5, h6").forEach(n=>{var i=n.getAttribute("id");t.push([i,e+n.getBoundingClientRect().y])})}(),l(),d()},300)};window.addEventListener("resize",function(e){s&&clearTimeout(s),u()}),u()})();</script></body>
 </html>
